--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,28 @@ padding: 10px;
   padding: 10px;
 
 }
+
+.column {
+  flex-direction: column;
+}
+
+input {
+  width: 100px;
+  padding: 10px;
+  margin: 10px;
+}
+
+button {
+  width: 100px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.box {
+  border: 2px solid black;
+  width: 400px;
+}
+
+.a-center {
+  align-items: center;
+}
